# mymusicdl

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: checks.yml  docker-image.yml
alembic/: env.py
alembic/versions/: .gitkeep
backend/app/: config.py  deps.py  logging.py  main.py  security.py
backend/app/api/: routes_album.py  routes_bots.py  routes_downloads.py  routes_events.py  routes_health.py  routes_jobs.py  routes_library.py  routes_preview.py  routes_search.py  routes_settings.py  routes_tools.py
backend/app/bots/: __init__.py  base.py  core.py  manager.py  matrix.py  telegram.py
backend/app/db/: base.py  engine.py  models.py  repo.py
backend/app/downloads/: errors.py  paths.py  preview.py  probe.py  progress.py  queue.py  runner.py  service.py  worker.py
backend/app/metadata/: aggregator.py  base.py  cache.py  musicbrainz.py  spotify.py
backend/app/navidrome/: client.py  matcher.py
backend/app/providers/: base.py  registry.py  spotdl_provider.py  streamrip_provider.py  tiddl_provider.py  ytdlp_provider.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  DEPLOY.md  GUIDELINES.md  ROADMAP.md  VERIFICATION.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: backup_db.sh  bootstrap_tools.sh  entrypoint.sh
tests/: conftest.py  test_api.py  test_enqueue_and_bots.py  test_units.py
(+32 files in other folders)
