[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mymusicdl"
version = "0.1.0"
description = "Family music downloader that feeds well-tagged single tracks into a Navidrome library"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "alembic>=1.13",
    "cryptography>=42",
    "packaging>=24",
    "python-multipart>=0.0.9",
]

# NOTE: the actual downloader CLIs (spotdl, yt-dlp, streamrip, tiddl) are NOT
# listed here on purpose. They live in a volume-mounted virtualenv ($TOOLS_VENV)
# so the app can `pip install -U` them at runtime and have the upgrade persist
# across container recreations. See scripts/bootstrap_tools.sh.

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
